# PokemonAPI

./: Cargo.toml  pokemon.json  rustfmt.toml
src/: main.rs
src/models/: pokemon.rs
src/services/: mod.rs  openapi.rs  pokemon.rs
