[package]
name = "pokemonapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.1.0", features = ["tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
utoipa = "4.2.0"
utoipa-swagger-ui = "6.0.0"
